force-app/main/default/src/objects/PJN_Care_Program_Specialty_Pharmacy__c/PJN_Care_Program_Specialty_Pharmacy__c.object-meta.xml
<CustomObject>
    <description>Defines the relationship between a Care Program and the Speciality Pharmacies which distribute the drug therapy.</description>
    <label>Care Program Specialty Pharmacy</label>
    <nameField>
        <displayFormat>CPSP-{00000}</displayFormat>
        <label>Care Program Specialty Pharmacy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Program Specialty Pharmacies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>