force-app/main/default/src/objects/PJN_Care_Program_Specialty_Pharmacy__c/fields/PJN_Last_Round_Robin_Assign_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PJN_Last_Round_Robin_Assign_Date_Time__c</fullName>
    <description>The last time this specialty pharmacy was assigned for the related program.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last time this specialty pharmacy was assigned for the related program.</inlineHelpText>
    <label>Last Round Robin Assign Date/Time</label>
    <type>DateTime</type>
</CustomField>