force-app/main/default/src/objects/PJN_Care_Program_Specialty_Pharmacy__c/fields/PJN_Program__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program__c</fullName>
    <description>The Program which the Speciality Pharmacy distributes drug for.</description>
    <label>Program</label>
    <referenceTo>CareProgram</referenceTo>
    <relationshipName>Program_Specialty_Pharmacies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>