force-app/main/default/src/objects/PJN_Care_Program_Specialty_Pharmacy__c/fields/PJN_Specialty_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>PJN_Specialty_Pharmacy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Specialty Pharmacy which distributes drug for the Care Program.</description>
    <label>Specialty Pharmacy</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must select Account with the Pharmacy record type.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Pharmacy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Care Programs</relationshipLabel>
    <relationshipName>Program_Specialty_Pharmacies</relationshipName>
    <type>Lookup</type>
</CustomField>